Update build to 3.2.6
Also update the maven compiler plugin version in the pom.

Change-Id: I11005e3a14d06733ff26ffdcce2952c999b43e55